Update composer.json name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pharaonic/laravel-seo",
+    "name": "fer-projekt/laravel-seo",
     "description": "SEO generates meta tags with quick and easy functions & blade directives.",
     "keywords": [
         "laravel seo",
